# fastapi_websocket_example

./: client.py  pyproject.toml  readme.md  server.py
routes/: websocket_routes.py
utils/: __init__.py  connection_manager.py  dependencies.py  handler_states.py
